--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <version>5.1.49</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
